--- a/Estudos_Kafka/Estudos_Kafka.csproj
+++ b/Estudos_Kafka/Estudos_Kafka.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Confluent.Kafka" Version="2.1.0" />
+    <PackageReference Include="Confluent.SchemaRegistry.Serdes" Version="1.3.0" />
   </ItemGroup>
 
 </Project>
