--- a/Estudos_Kafka_Consumer/Estudos_Kafka_Consumer.csproj
+++ b/Estudos_Kafka_Consumer/Estudos_Kafka_Consumer.csproj
@@ -6,7 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Confluent.Kafka" Version="2.1.0" />
+    <PackageReference Include="Confluent.Kafka" Version="2.1.1" />
+    <PackageReference Include="Confluent.SchemaRegistry.Serdes" Version="1.3.0" />
   </ItemGroup>
 
 </Project>
